removed needless final modifiers; migrated to modern java syntax